--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <td><img src="file:///C:/Users/Mike/Desktop/Web%20development/html%20personal%20site/images/html%20project.jpg" width="350" height="350"></td>
 
       <td>
-        <h1>Michael Daniel</h1>
+        <h1>Michael Daniel Jr</h1>
         <p><em>Learning to Become A <strong>Blockchain Developer</strong>.</em></p>
         <p>In the beginning of my life I didn't know what i wanted to do. Two weeks ago I learned about the success of Blockchain Technology and figure I would go that route to become a Developer.
           With no experience in programming I chose to self teach myself and here we are now. I am officially taking the next steps to solidify my future in the tech world. I want to build aa future for my family to become financially free and also
