--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="file:///C:/Users/Mike/Desktop/Web%20development/html%20personal%20site/images/html%20project.jpg" width="350" height="350"></td>
+      <td><img src="images/html project.jpg" alt="Success Story image" width="350" height="350"></td>
 
       <td>
         <h1>Michael Daniel Jr</h1>
