--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/html project.jpg" alt="Success Story image" width="350" height="350"></td>
+      <td><https://thumbs.dreamstime.com/b/vision-goal-action-success-business-strategy-ladder-arrow-text-84946026.jpg width="350" height="350"></td>
 
       <td>
         <h1>Michael Daniel Jr</h1>
