--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/html project.jpg" alt="Success Story image" width="350" height="350"></td>
-
+      <td><img src="https://thumbs.dreamstime.com/b/vision-goal-action…-business-strategy-ladder-arrow-text-84946026.jpg" width="350" height="350"></td>
+<br>
       <td>
         <h1>Michael Daniel Jr</h1>
         <p><em>Learning to Become A <strong>Blockchain Developer</strong>.</em></p>
