--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     </tr>
   </table>
 
-  <a href="contact-info.html">Contact Info</a>
+  <a href="file:///C:/Users/Mike/Desktop/Web%20development/html%20personal%20site/contact%20info.html">Contact Info</a>
 
 
 
