--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     </tr>
   </table>
 
-  <a href="contacts.html">Contact Info</a>
+<li><a href="contacts.html">Contact Info</a></li>
 
 
 </body>
