--- a/index.html
+++ b/index.html
@@ -101,8 +101,7 @@
     <td>⭐⭐⭐⭐⭐</td>
     </tr>
   </table>
-
-<li><a href="contacts.html">Contact Info</a></li>
+<a href="contacts.html">Contact Info</a>
 
 
 </body>
