--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title> Michael's Personal Site</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
